# cdm

./: Cargo.toml  README.md
proptest-regressions/: newton_interpolation.txt  polynomials.txt
src/: ch03.rs  ch05.rs  ch08.rs  ch09.rs  ch10.rs  ch21.rs  count_ops.rs  cra.rs  dft.rs  domain.rs  euclidean_domain.rs  field.rs  finite.rs  gaussian_integers.rs  groebner.rs  group.rs  identity.rs  integers.rs  latex.rs  lib.rs  main.rs  mono.rs  multi_eval.rs  multivariate_polynomials.rs  naturals.rs  newton_interpolation.rs  polynomials.rs  prelude.rs  rationals.rs  reals.rs  ring.rs
