[package]
name = "cdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "6.1.2"
derive_more = "0.99.17"
either = "1.8.0"
itertools = "0.10.5"
regex = "1.7.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.0.0"
